@@ -17,7 +17,7 @@
 </head>
 <body id="index" class="page-webapps">
 <div class="wrapper">
-                    <div class="navbar navbar-default main_nav">
+                    <div class="navbar navbar-default main_nav" data-bind="visible: !sideView()">
 	<div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
